Added stacking stage based on HDR

--- a/post_processing_stages/meson.build
+++ b/post_processing_stages/meson.build
@@ -5,6 +5,7 @@ rpicam_app_src += files([
     'negate_stage.cpp',
     'post_processing_stage.cpp',
     'pwl.cpp',
+    'stacking_stage.cpp',
 ])
 
 post_processing_headers = files([
